[project]
name = "panscience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.28.0",
    "beautifulsoup4>=4.12.2",
    "fpdf2>=2.8.7",
    "google-genai>=2.3.0",
    "langchain>=1.3.0",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.2.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.32.0",
]
